CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 6.5 REQUIRED)

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

FILE(GLOB src-cuda *.cu)
FILE(GLOB luasrc *.lua)

ADD_TORCH_PACKAGE(culab "${src-cuda}" "${luasrc}" "rgb2lab Cuda")
TARGET_LINK_LIBRARIES(culab luaT TH)
IF(LUALIB)
    TARGET_LINK_LIBRARIES(culab ${LUALIB})
ENDIF()
